# flows-connector-dsi

./: Cargo.toml  README.md
.github/workflows/: build.yml  tests.yml
src/: discord.rs  github.rs  gmail.rs  jira.rs  lib.rs  monday.rs  notion.rs  sendgrid.rs  telegram.rs  twilio.rs
src/tests/: discord_message.json  discord_tests.rs  github_create.json  github_discussion_comment.json  github_fork.json  github_issue_comment.json  github_label.json  github_marketplace_purchase.json  github_pr_review_comment.json  github_pull_request_review.json  github_push.json  github_release.json  github_tests.rs  github_workflow_job.json  gmail_tests.rs  jira_comment_created.json  jira_comment_updated.json  jira_issue_created.json  jira_issue_updated.json  jira_tests.rs  mod.rs  telegram_message.json  telegram_my_chat_member.json  telegram_tests.rs
