[package]
name = "flows-connector-dsi"
version = "0.1.3"
edition = "2021"
description = "Data struct interface used in flow functions of flows.network"
license = "MIT"
repository = "https://github.com/second-state/flows-connector-dsi"
authors = [
    "ho-229 <ho229v3666@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
chrono = "0.4.22"
