[package]
name = "flows-connector-dsi"
version = "0.1.11"
edition = "2021"
description = "Data struct interface used in flow functions of flows.network"
license = "MIT"
repository = "https://github.com/flows-network/flows-connector-dsi"
authors = [
    "flows.network team",
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = { version = "1.0" }
chrono = "0.4"
